base-canal-admin/canal-admin/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: canal-admin.{__RUN_ENV__}
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: canal-admin
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: canal-admin
        image: master/library/canal-admin:1.1.4
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 2
            memory: 4096Mi
          requests:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: logdir
          mountPath: /app/logs
      - name: filebeat
        image: master/library/filebeat:7.2.0
        volumeMounts:
        - name: logdir
          mountPath: /app/logs
      volumes:
      - name: logdir
        emptyDir: {}
