base-canal-admin/canal-admin/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: canal-admin
  labels:
    app: canal-admin
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: canal-admin
