base-canal-admin/canal-admin/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canal-admin
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host:master
    http:
      paths:
      - path: /
        backend:
          serviceName: canal-admin
          servicePort: 8080
  - host: master
    http:
      paths:
      - path: /
        backend:
          serviceName: canal-admin
          servicePort: 8080
